--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-
+                         
   <header>
 
    <div class="container">
@@ -104,18 +104,18 @@
 
       </div>
      </div>  
-    <div>
+    </div>
     </div>
 
-       </div>
-          <img src="./images/illustration-2.svg" alt="section-img"/>
+       <div>
+          <img class="ill" src="./images/illustration-2.svg" alt="section-img"/>
         </div>
 
   </div> 
  </div>
  </section> 
 
-    <section class="light-blue">
+    <section class="blueish">
       <div class="container">
         <div class="content">       
               <div>
@@ -178,7 +178,7 @@
             Terms
           </li>
           <li>
-            >Privacy
+            Privacy
           </li>
         </ul>
         <ul class="social-dedia">
